<resources>
    <string name="app_name">IKKURE</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_description_open_drawer">open DrawerLayout</string>
    <string name="edit_title_hint">No File</string>

    <string name="drawer_open">drawer_open</string>
    <string name="drawer_close">drawer_close</string>

    <string name="open">열기</string>
    <string name="scale11">1 : 1</string>
    <string name="scale43">4 : 3</string>
    <string name="scale34">3 : 4</string>
    <string name="scale32">3 : 2</string>
    <string name="scale23">2 : 3</string>
    <string name="scale169">16 : 9</string>
    <string name="scale916">9 : 16</string>
    <string name="saturation">채도</string>
    <string name="brightness">명도</string>
    <string name="transparency">투명도</string>
    <string name="fontText">Aa</string>

    <string name="splitBitmap">splitBitmap</string>
    <string name="name">name</string>
    <string name="intentImageType">image/*</string>
    <string name="image">image</string>
    <string name="saveToast">선택된 이미지가 없습니다.</string>

    <string name="backbround">배경</string>
    <string name="split">자르기</string>
    <string name="hue">색조</string>
    <string name="emoji">스티커</string>
    <string name="text">텍스트</string>

    <string name="ratio">비율</string>
    <string name="color">컬러</string>
    <string name="image_item">이미지</string>

    <string name="square">사각형</string>
    <string name="circle">원</string>
    <string name="polygon">다각형</string>

    <string name="font">폰트</string>
    <string name="scale">크기</string>

    <string name="keyword">keyword</string>
    <string name="defaultValue">0</string>
</resources>