<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_navi_background"
        android:enabled="true"
        android:icon="@drawable/ic_background"
        android:title="@string/backbround" />

    <item
        android:id="@+id/menu_navi_split"
        android:enabled="true"
        android:icon="@drawable/ic_split"
        android:title="@string/split" />

    <item
        android:id="@+id/menu_navi_hue"
        android:enabled="true"
        android:icon="@drawable/ic_hue"
        android:title="@string/hue" />

    <item
        android:id="@+id/menu_navi_sticker"
        android:enabled="true"
        android:icon="@drawable/ic_sticker"
        android:title="@string/emoji" />

    <item
        android:id="@+id/munu_navi_text"
        android:enabled="true"
        android:icon="@drawable/ic_text"
        android:title="@string/text" />
</menu>